[package]
name = "rs-glfw"
version = "0.1.0"
edition = "2021"

[lib]
name = "deno_glfw"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_bindgen = "0.4.1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
libc = "*"
gl = "0.10.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false